--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -1,4 +1,17 @@
-#gimg{
-    width: 10px;
-    height: 10px;
+main img{
+    height: 200px;
+
+    width: 30%;
+    /* margin: 1.6666%;
+    or */
+    margin: calc(10%/6);
+}
+main section{
+    text-transform: uppercase;
+    border-bottom: 2px solid #f1f1f1;
+    width: 30%;
+    margin-left: calc(10%/6);
+    padding: 20px, 0;
+    font-size: large;
+    font-weight: 400;
 }
